external/lmgc90_dev-fortran_lib/src/ChiPy/rigid_3D/wrap_POLYR.h

 /**
  * @fn void POLYR_InitScalarFields(double ** pointer_out, int * dim1, int * dim2)
  * @brief Get a reference on the scalar fields of all POLYR
  *
  * @cond PYDOC
  * usage : scalarfields = POLYR_InitScalarfields()
  * @return scalarfields (double array) : reference on scalarfields_POLYR array
  * @endcond
  *
  * @cond CDOC
  * @param[in,out] pointer_out (double **) : reference on scalarfields array
  * @param[in,out] dim1 (int *)            : first dimension of pointer_out
  * @param[in,out] dim2 (int *)            : second dimension of pointer_out
  * @endcond
  *
  */
  extern "C" void POLYR_InitScalarFields(double ** pointer_out, int * dim1, int * dim2);
 // a virer
 /**
  * @fn void POLYR_UpdatePostdata(void)
  * @brief Update values of outlines_POLYR and scalarfields_POLYR pointers
  *
  * @cond PYDOC
  * usage : POLYR_UpdatePostdata()
  * @endcond
  *
  */
  extern "C" void POLYR_UpdatePostdata(void);
 /**
  * @fn void POLYR_GetNbPointOutlines(int ** pointer_out, int * length)
  *
  * @brief Get the list of cumulated outline points number
  *
  * @cond PYDOC
  * python usage : nb_pointOutlines = POLYR_GetNbPointOutlines()
  * @return nb_pointOutlines (integer array) : the cumulated number of outline points of the POLYR
  * @endcond
  *
  * @cond CDOC
  * @param[in,out] pointer_out (int **) : reference on nb_point_outlines array
  * @param[in,out] length (int *)       : first dimension of pointer_out
  * @endcond
  */
  extern "C" void POLYR_GetNbPointOutlines(int** pointer_out, int* length);
  
 /**
  * @fn int POLYR_GetNbScalarFields(void)
  *
  * @brief Get the number of scalar fields of a POLYR
  *
  * @cond PYDOC
  * python usage : nb_scalarfields = POLYR_GetNbScalarFields()
  * @return nb_scalarfields (integer) : the number of scalar fields of a POLYR
  * @endcond
  *
  * @cond CDOC
  * @return nb_scalarfields (int) : the number of scalar fields of a POLYR
  * @endcond
  */
  extern "C" int POLYR_GetNbScalarFields(void);
  
 /**
  * @fn void POLYR_GetPtrAllConnectivities(int ** i4_vector, int * i4_size)
  * @brief Get a reference on the connectivities of all POLYR
  *
  * @cond PYDOC
  * usage : connec = POLYR_GetPtrAllConnectivities()
  * @return connec (integer array) : a reference on all_connectivities
  * @endcond
  *
  * @cond CDOC
  * @param[in,out] pointer_out (int **) : reference on all_connectivities array
  * @param[in,out] length (int *)       : length of pointer_out
  * @endcond
  *
  */
  extern "C" void POLYR_GetPtrAllConnectivities(int ** pointer_out, int * length);
 /**
  * @fn void POLYR_GetPtrConnectivity(int itacty, int** pointer_out, int * dim1, int * dim2)
  * @brief Get a reference on the connectivity of one POLYR
  *
  * @cond PYDOC
  * usage : connec = POLYR_GetPtrConnectivity(itacty)
  * @param itacty (integer) : POLYR number
  * @return connec (integer 2D-array) : reference on connectivity
  * @endcond
  *
  * @cond CDOC
  * @param[in] itacty (int) : id of POLYR
  * @param[in,out] matrix_out (int **) : reference on connectivity array
  * @param[in,out] dim1 (int *)        : dim1 of matrix_out
  * @param[in,out] dim2 (int *)        : dim2 of matrix_out
  * @endcond
  *
  */
  extern "C" void POLYR_GetPtrConnectivity(int itacty, int ** pointer_out, int * dim1, int * dim2);
 /**
  * @fn void POLYR_GetPtrVertexRef(int itacty, double** matrix_out, int* dim1, int* dim2)
  * @brief Get the position of the vertices of a POLYR in its inertia frame
  *
  * @cond PYDOC
  * usage : vertex = POLYR_GetPtrVertexRef(itacty)
  * @param  itacty (integer)         : rank of considered POLYR
  * @return vertex (double 2D-array) : the coordinates of the vertices
  * @endcond
  *
  * @cond CDOC
  * @param[in]     itacty (int)          : rank of considered POLYR
  * @param[in,out] matrix_out (double**) : reference on the array with vertices coordinates
  * @param[out]    dim1 (int*)           : number of dof per vertex
  * @param[out]    dim2 (int*)           : number of vertices
  * @endcond
  */
  extern "C" void POLYR_GetPtrVertexRef(int itacty, double** pointer_out, int* dim1, int* dim2);
 /**
  * @fn void POLYR_GetTopoData(int** matrix_out, int* dim1, int* dim2)
  * @brief Get for each face of all POLYR : contactor id, topo id, face id and face status
  *
  * @cond PYDOC
  * usage : topo_data = POLYR_GetTopoData()
  * @return topt_data (int 2D-array) : topology data of all faces of all POLYR
  * @endcond
  *
  * @cond CDOC
  * @param[in,out] matrix_out (int**) : topology data of all faces of all POLYR
  * @param[out]    dim1 (int*)        : 4
  * @param[out]    dim2 (int*)        : number of faces
  * @endcond
  */
  extern "C" void POLYR_GetTopoData(int** matrix_out, int* dim1, int* dim2);
 /**
   * @fn void POLYR_CleanMemory(void)
   * @brief Free all memory allocated within POLYR module
   *
   * @cond PYDOC
   * python usage : POLYR_CleanMemory()
   * @endcond
   */
   extern "C" void POLYR_CleanMemory(void);