temp/lmgc90_dev/src/ChiPy/rigid_3D/wrap_POLYR.f90


    if( associated(outlines) ) then
      ptr    = c_loc(outlines(1,1))
      dim1 = size(outlines,1)
      dim2 = size(outlines,2)
    else
      ptr = c_null_ptr
      dim1 = 0
      dim2 = 0
    end if

  end subroutine

  subroutine InitScalarfields(ptr, dim1, dim2) bind(c, name='POLYR_InitScalarFields')
    implicit none
    integer(kind=c_int) :: dim1, dim2
    type(c_ptr) :: ptr
    !
    real(kind=8), dimension(:), pointer :: scalarfields

    scalarfields => init_scalarfields_POLYR()

    if( associated(scalarfields) ) then
      ptr  = c_loc(scalarfields(1))
      dim1 = get_nb_scalarfields_POLYR()
      dim2 = get_nb_POLYR()
    else
      ptr = c_null_ptr
      dim1 = 0
      dim2 = 0
    end if

  end subroutine

  subroutine UpdatePostdata() bind(c, name='POLYR_UpdatePostdata')
    implicit none

    call update_postdata_POLYR

  end subroutine

  subroutine GetNbPointOutlines(ptr, length) bind(c, name='POLYR_GetNbPointOutlines')
    implicit none
    type(c_ptr)    :: ptr
    integer(c_int) :: length
    !
    integer(kind=4), dimension(:), pointer :: nb_point_outlines

    nb_point_outlines => get_nb_point_outlines_POLYR()

    if( associated(nb_point_outlines) ) then
      ptr    = c_loc(nb_point_outlines(1))
      length = size(nb_point_outlines)
    else
      ptr = c_null_ptr
      length = 0
    end if

  end subroutine GetNbPointOutlines
  

  function GetNbScalarfields() bind(c, name='POLYR_GetNbScalarFields')
    implicit none
    integer(c_int) :: GetNbScalarfields

    GetNbScalarfields = get_nb_scalarfields_POLYR()

  end function GetNbScalarfields

  subroutine GetAllConnectivities(ptr, dim1) bind(c, name='POLYR_GetPtrAllConnectivities')
    implicit none
    integer(kind=c_int) :: dim1
    type(c_ptr) :: ptr
    !
    integer(kind=4), dimension(:), pointer :: connec

    connec => get_all_connectivities_POLYR()

    if( associated(connec) ) then
      ptr    = c_loc(connec(1))
      dim1 = size(connec)
    else
      ptr = c_null_ptr
      dim1 = 0
    end if

  end subroutine

  subroutine get_ptr_Connectivity(itacty, connec, dim1, dim2) bind(c, name='POLYR_GetPtrConnectivity')
    implicit none
    integer(c_int), intent(in), value :: itacty
    type(c_ptr)    :: connec
    integer(c_int) :: dim1, dim2
    !
    integer(kind=4), dimension(:,:), pointer :: ptr

    ptr => null()
    ptr => get_ptr_connectivity_POLYR(itacty)

    if( associated(ptr) ) then
      connec = c_loc(ptr(1,1))
      dim1 = size(ptr,1)
      dim2 = size(ptr,2)
    else
      dim1 = 0
      dim2 = 0
      connec = c_null_ptr
    end if

  end subroutine

  subroutine get_ptr_vertex_ref(itacty, vertex, dime, nb_vertices) bind(C, name='POLYR_GetPtrVertexRef')
    use overall, only: nbDIME
    implicit none
    integer(c_int), intent(in), value :: itacty
    type(c_ptr)    :: vertex
    integer(c_int) :: dime, nb_vertices
    !
    real(kind=8), dimension(:), pointer :: ptr

    ptr => null()
    ptr => get_ptr_vertex_ref_polyr(itacty)
    if( associated(ptr) ) then
      vertex = c_loc(ptr(1))
      dime        = nbDIME ! rm : beurk
      nb_vertices = size(ptr)/nbDIME
    else
      dime        = 0
      nb_vertices = 0
      vertex = c_null_ptr
    end if

  end subroutine

  subroutine GetTopoData(ptr, dim1, dim2) bind(c, name='POLYR_GetTopoData')
    implicit none
    integer(kind=c_int) :: dim1, dim2
    type(c_ptr) :: ptr
    !
    integer, dimension(:,:), pointer :: topo_data

    topo_data => get_topo_data_POLYR()

    if( associated(topo_data) ) then
      ptr    = c_loc(topo_data(1,1))
      dim1 = size(topo_data,1)
      dim2 = size(topo_data,2)
    else
      ptr = c_null_ptr
      dim1 = 0
      dim2 = 0
    end if

  end subroutine

  subroutine CleanMemory() bind(c, name='POLYR_CleanMemory')
    implicit none

    call clean_memory_POLYR

  end subroutine

end module wrap_POLYR
